# uf

./: .gitignore  .gitmodules  document_structure.json  ocr.py  process_pages_v2.py  process_pages_v3_phase1.py  pyproject.toml  translation.py
legacy/examples/HoTT_ebook/: HoTT_PDF_sep.csv
legacy/src/: process_pages_v3_phase2.py
uf/: config.json  main.py
uf/lib/: page_splitter.py  translation.py
uf/lib/UnrollForge/: DocumentProcessor.py  FileManager.py  LLMClient.py  Log.py
